assets/main.css
/* ... */
.sidebar-right .logo img+h1{
    left:auto;
    right:calc(30px + 1rem);
    transform:translateX(20px);
    text-align:right
}
.sidebar-right .logo:hover img+h1{
    transform:none
}
.sidebar__toggler span{
    display:inline-block;
    position:absolute;
    background-color:var(--gray);
    height:2px;
    left:5%;
    transition:all .25s linear;
    border-radius:2px
}
.sidebar__toggler_top{
    width:40%;
    top:7.5px
}
.sidebar__toggler_middle{
    width:70%;
    top:19px
}
.sidebar__toggler_bottom{
    width:90%;
    bottom:7.5px
}
.sidebar__toggler:hover .sidebar__toggler_top{
    width:90%
}
.sidebar__toggler:hover .sidebar__toggler_bottom{
    width:40%
}
.sidebar__toggler.active .sidebar__toggler_top{
    transform-origin:5% 5%;
    width:90%;
    transform:rotate(45deg)
}
.sidebar__toggler.active .sidebar__toggler_middle{
    opacity:0
}
.sidebar__toggler.active .sidebar__toggler_bottom{
    width:90%;
    transform-origin:5% 95%;
    transform:rotate(-45deg)
}
a.nav-link{
    display:inline-block;
    padding:5px .25rem;
    position:relative
}
a.nav-link:after{
    content:"";
    position:absolute;
    display:inline-block;
    left:0;
    bottom:0;
    height:1px;
    background-color:var(--light-gray);
    width:0;
    transition:width .25s ease-out
}
a.nav-link:hover:after{
    width:100%
}
a.nav-link.active:after{
    background-color:var(--gray);
    width:100%
}
.top-nav{
    margin:-2.45rem 0 3.45rem;
    text-align:right
}
.top-nav a{
    margin:0 0 0 1rem
}
@media screen and (max-width:768px){
    .logo,.logo.active,.sidebar-right .logo,.sidebar-right .logo.active{
        position:absolute;
        left:1.5rem;
        top:2rem;
        margin:0
    }
    .sidebar-right .sidebar__toggler,.sidebar-right .sidebar__toggler.active,.sidebar__toggler,.sidebar__toggler.active{
        position:absolute;
        bottom:auto;
        top:2rem;
        right:1rem;
        margin:-10px 0 0;
        left:auto
    }
    .top-nav{
        padding-left:40px
    }
}
.content{
    display:block;
    word-wrap:break-word;
    overflow:hidden;
    color:var(--lightest);
    line-height:1.7;
    text-align:justify;
    text-justify:inter-word
}
.content *{
    box-sizing:border-box;
    -webkit-box-sizing:border-box;
    font-size:inherit
}
.content>:last-child{
    margin-bottom:0!important
}
.content blockquote,.content code,.content figure,.content img,.content pre,.content table,.content tr{
    page-break-inside:avoid
}
.content h2,.content h3,.content h4,.content h5,.content p{
    orphans:3;
    widows:3
}
.content h1,.content h2,.content h3,.content h4,.content h5{
    page-break-after:avoid
}
.content b,.content strong{
    font-weight:700
}
.content em{
    font-style:italic
}
.content blockquote,.content dl,.content ol,.content p,.content table,.content ul{
    margin-top:0;
    margin-bottom:.85em
}
.content a{
    text-decoration:none;
    background:transparent;
    border-bottom:1px dashed var(--link);
    color:var(--link)
}
.content a:active,.content a:focus,.content a:hover{
    outline:0;
    border-style:solid
}
.content img{
    border:0;
    max-width:100%;
    vertical-align:middle;
    display: block;
    margin: auto;
}
.content hr{
    height:1px;
    padding:0;
    margin:1.7em 0;
    overflow:hidden;
    background-color:#e7e7e7;
    border:none
}
.content hr:after,.content hr:before{
    display:table;
    content:" "
}
.content hr:after{
    clear:both
}
.content h1,.content h2,.content h3,.content h4,.content h5,.content h6{
    margin-top:1.275em;
    margin-bottom:.85em;
    font-weight:550
}
.content h1{
    font-size:2.3em;
    font-weight:500;
    margin-bottom:1em
}
.content h2{
    font-size:1.75em
}
.content h3{
    font-size:1.5em
}
.content h4{
    font-size:1.25em
}
.content h5,.content h6{
    font-size:1em
}
.content h6{
    color:#777
}
.content code,.content pre{
    font-family:Consolas,Liberation Mono,Menlo,Courier,monospace;
    direction:ltr;
    margin:0;
    padding:0;
    border:none;
    color:inherit
}
.content pre{
    overflow:auto;
    word-wrap:normal;
    padding:.85em 1em;
    margin:0 0 1.275em;
    background:var(--lightest)
}
.content pre>code{
    display:inline;
    max-width:none;
    padding:0;
    margin:0;
    overflow:initial;
    line-height:inherit;
    font-size:.85em;
    white-space:pre;
    background:transparent
}
.content pre>code:after,.content pre>code:before{
    content:normal
}
.content code{
    padding:.2em;
    margin:0;
    font-size:.85em;
    background-color:var(--lightest);
    border-radius:3px
}
.content code:after,.content code:before{
    letter-spacing:-.2em;
    content:" "
}
.content table{
    display:table;
    width:100%;
    border-collapse:collapse;
    border-spacing:0;
    overflow:auto
}
.content table td,.content table th{
    padding:6px 13px;
    border:1px solid #ddd
}
.content table tr{
    background-color:#fff;
    border-top:1px solid var(--gray-light)
}
.content table tr:nth-child(2n){
    background-color:var(--lightest)
}
.content table th{
    font-weight:700
}
.content ol,.content ul{
    margin:0 0 .85em;
    padding:0 0 0 2em
}
.content ol ol,.content ol ul,.content ul ol,.content ul ul{
    margin-top:0;
    margin-bottom:0
}
.content ol ol{
    list-style-type:lower-roman
}
.content blockquote{
    margin:0 0 .85em;
    padding:0 15px;
    color:var(--gray-light);
    border-left:4px solid var(--light)
}
.content blockquote:first-child{
    margin-top:0
}
.content blockquote:last-child{
    margin-bottom:0
}
.content dl{
    padding:0
}
.content dl dt{
    padding:0;
    margin-top:.85em;
    font-style:italic;
    font-weight:700
}
.content dl dd{
    padding:0 .85em;
    margin-bottom:.85em
}
.content dd{
    margin-left:0
}
.content .mermaid{
    margin-bottom:.85rem
}
.content sup .footnote{
    font-size:.75rem
}
/* ... */

